--- a/app/assets/stylesheets/layout/breadcrumb.css.sass
+++ b/app/assets/stylesheets/layout/breadcrumb.css.sass
@@ -29,6 +29,7 @@
 @import "mixins"
 
 #breadcrumb
+  @include default-transition
   height: 40px
   overflow: hidden
   background: none repeat scroll 0 0 #F8F8F8
